<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="app_name">安卓管家</string>
    <string name="package_name">com.zx.housekeeper</string>
    <string name="txt_ram_used">内存:12.35M</string>
    <string name="txt_system_process">系统进程</string>
    <string name="version_code">1.0</string>
    <string name="setting_title">设置</string>
    <string name="txt_lead_skip">直接跳过</string>
    <string name="main_menu_text">文件管理</string>
    <string name="about">关于手机</string>
    <string name="app_version">V1.0.0</string>
    <string name="setting_switch">开关</string>
    <string name="txt_file_total_mem">9.79G</string>
    <string name="clean_total_mem">0B</string>
    <string name="txt_file_type">全部</string>
    <string name="txt_already_found">已发现</string>
    <string name="delete_select_file">删除所选文件</string>
    <string name="clean_select_file">清理所选文件</string>
    <string name="uninstall_selected_app">卸载所选软件</string>
    <string name="show_system_process">显示系统进程</string>
    <string name="file_number">文件数量：</string>
    <string name="txt_file_total_number">0个</string>
    <string name="occupy_memory">占用空间：</string>
    <string name="txt_occupy_total_memory">0.00M</string>
    <string name="txt_phone_cache">手机缓存垃圾</string>
    <string name="txt_inner_memory">手机内置空间</string>
    <string name="txt_free_memory">剩余内存</string>
    <string name="txt_outer_memory">外置存储空间</string>
    <string name="txt_device_name_default">小米</string>
    <string name="txt_device_model_default">红米 Note3 Android 6.0.1</string>
    <string name="txt_ram_occupy_default">已用内存: 1.52G/1.81G</string>
    <string name="txt_battery_percent_default">50%</string>
    <string name="txt_phone_info1_default">设备名称:Xiaomi</string>
    <string name="txt_phone_info2_default">系统版本:6.0.1</string>
    <string name="text_btn_speed_up">一键加速</string>
    <string name="battery_charge_info">电池电量信息</string>

    <!-- main center text -->

    <string name="home_clear">手机加速</string>
    <string name="mem_percent">%</string>
    <string name="num_mem">25</string>

    <!-- tel number dialog text -->
    <string name="dial">拨号</string>
    <string name="send_sms">短信</string>
    <string name="cancel">取消</string>

    <!-- picture description -->
    <string name="main_menu_img_description">主菜单标题</string>
    <string name="main_center_img_description">主菜单加速按钮</string>
    <string name="leadimage_description">Guide page image</string>
    <string name="soft_image_load_description">loading</string>
    <string name="progress_image_load_description">loading</string>
    <string name="clean_image_load_description">loading</string>
    <string name="leadtext_description1">Small icon 1</string>
    <string name="leadtext_description2">Small icon 2</string>
    <string name="leadtext_description3">Small icon 1</string>
    <string name="phone_info_img_description">phone info</string>
    <string name="title_bar_description1">标题栏左侧按钮</string>
    <string name="title_bar_description2">标题栏右侧按钮</string>
    <string name="clean_image_description">app icon</string>
    <string name="soft_image_description">app icon</string>
    <string name="progress_image_description">app icon</string>
    <string name="about_image_description">About page image</string>
    <string name="image_right_arrow">image right arrow</string>
    <string name="file_icon_description">文件图标</string>
    <string name="txt_file_name_default">1234.mp4</string>
    <string name="txt_file_time_default">1999&#8211;01&#8211;01 00:00:00</string>
    <string name="txt_file_size_default">0.00kb</string>

    <!-- menu strings -->
    <string-array name="text_main_menu">
        <item>手机加速</item>
        <item>软件管理</item>
        <item>手机检测</item>
        <item>通讯大全</item>
        <item>文件管理</item>
        <item>垃圾清理</item>
    </string-array>
    <!-- arrays -->
    <!-- setting page -->
    <string-array name="texts_setting_switch">
        <item>开机启动</item>
        <item>消息推送</item>
        <item>通知图标</item>
        <item>帮助说明</item>
        <item>意见反溃</item>
        <item>好友分享</item>
        <item>版本更新</item>
        <item>关于我们</item>
    </string-array>
    <!-- file manager page -->
    <string-array name="txt_file_types">
        <item>全部</item>
        <item>文档</item>
        <item>视频</item>
        <item>音频</item>
        <item>图像</item>
        <item>压缩包</item>
        <item>程序包</item>
        <item>其它</item>
    </string-array>
    <string-array name="elv_groun_name">
        <item>手机缓存垃圾</item>
        <item>手机内存垃圾</item>
        <item>SD卡缓存垃圾</item>
        <item>SD卡内存垃圾</item>
    </string-array>
    <string-array name="lst_soft_title">
        <item>所有软件</item>
        <item>系统软件</item>
        <item>用户软件</item>
    </string-array>

</resources>