<!-- file manager detail surface -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FileDetailActivity" >

    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/title_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="10dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/file_number" />

        <TextView
            android:id="@+id/txt_file_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_file_total_number"
            android:textColor="@color/text_file_num_color"
            android:textSize="@dimen/txt_file_num_size"
            android:textStyle="bold|italic" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/occupy_memory" />

        <TextView
            android:id="@+id/txt_occupy_mem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_occupy_total_memory"
            android:textColor="@color/text_file_num_color"
            android:textSize="@dimen/txt_file_num_size"
            android:textStyle="bold|italic" />
    </LinearLayout>

    <ListView
        android:id="@+id/lst_file_detail_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >
    </ListView>

    <Button
        android:id="@+id/btn_del_select"
        android:layout_width="match_parent"
        android:layout_height="@dimen/bottom_widget_height"
        android:background="@drawable/btn_file_detail_selector"
        android:text="@string/delete_select_file"
        android:textColor="@color/white" />

</LinearLayout>