<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home_entry_item_normal"
    android:gravity="center_vertical"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/txt_device_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center_horizontal"
        android:text="@string/txt_device_name_default"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/txt_model_and_version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/txt_device_model_default"
        android:textColor="@color/black"
        android:textSize="12sp" />

    <ProgressBar
        android:id="@+id/pgb_ram_occupy"
        style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:max="100"
        android:progress="50"
        android:progressDrawable="@drawable/speed_up_pgb_layer" />

    <TextView
        android:id="@+id/txt_ram_occupy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:gravity="right"
        android:text="@string/txt_ram_occupy_default"
        android:textColor="@color/speed_up_pgb_and_txt_color"
        android:textSize="@dimen/speed_txt_occupy" />

    <Button
        android:id="@+id/btn_speed_up"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/btn_file_detail_selector"
        android:text="@string/text_btn_speed_up"
        android:textColor="@color/white" />

</LinearLayout>