<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="horizontal" >

    <CheckBox
        android:id="@+id/chb_selete_clean"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/clv_child_widget_size"
        android:button="@drawable/check_box_selector"
        android:focusable="false"
        android:focusableInTouchMode="false" />

    <ImageView
        android:id="@+id/img_app_icon"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/clv_child_widget_size"
        android:layout_marginLeft="10dp"
        android:contentDescription="@string/clean_image_description"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/txt_app_name"
        android:layout_width="0dp"
        android:layout_height="@dimen/clv_child_widget_size"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:text="@string/app_name"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/txt_app_clean_mem"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/clv_child_widget_size"
        android:gravity="center_vertical"
        android:text="@string/clean_total_mem"
        android:textSize="18sp" />

</LinearLayout>