<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:addStatesFromChildren="true"
    android:background="@drawable/main_menu_item_bg_selector"
    android:descendantFocusability="blocksDescendants"
    android:gravity="center_vertical" >

    <CheckBox
        android:id="@+id/chb_select_unins"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:button="@drawable/check_box_selector"
        android:focusable="false"
        android:focusableInTouchMode="false" />

    <ImageView
        android:id="@+id/img_soft_icon"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_toRightOf="@+id/chb_select_unins"
        android:contentDescription="@string/soft_image_description"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/txt_soft_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/img_soft_icon"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="2.5dp"
        android:layout_toRightOf="@+id/img_soft_icon"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/txt_pkg_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/img_soft_icon"
        android:layout_marginBottom="2.5dp"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@+id/img_soft_icon"
        android:text="@string/package_name"
        android:textColor="@color/black"
        android:textSize="@dimen/soft_mgr_txt_size" />

    <TextView
        android:id="@+id/txt_version_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/txt_soft_name"
        android:layout_alignParentRight="true"
        android:layout_marginRight="10dp"
        android:text="@string/version_code"
        android:textColor="@color/black"
        android:textSize="@dimen/soft_mgr_txt_size" />

</RelativeLayout>