<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:addStatesFromChildren="true"
    android:background="@drawable/main_menu_item_bg_selector"
    android:descendantFocusability="blocksDescendants"
    android:gravity="center_vertical" >

    <ImageView
        android:id="@+id/img_phone_det_info"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/notification_information_progress_green"
        android:contentDescription="@string/phone_info_img_description"
        android:src="@drawable/setting_info_icon_version" />

    <TextView
        android:id="@+id/txt_phone_det_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_alignTop="@+id/img_phone_det_info"
        android:layout_toRightOf="@+id/img_phone_det_info"
        android:text="@string/txt_phone_info1_default" />

    <TextView
        android:id="@+id/txt_phone_det_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_alignBottom="@+id/img_phone_det_info"
        android:layout_toRightOf="@+id/img_phone_det_info"
        android:text="@string/txt_phone_info2_default" />

</RelativeLayout>