<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:addStatesFromChildren="true"
    android:background="@drawable/main_menu_item_bg_selector"
    android:descendantFocusability="blocksDescendants"
    android:gravity="center_vertical" >

    <CheckBox
        android:id="@+id/chb_select_kill"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:layout_marginLeft="10dp"
        android:button="@drawable/check_box_selector"
        android:focusable="false"
        android:focusableInTouchMode="false" />

    <ImageView
        android:id="@+id/img_process_icon"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_toRightOf="@+id/chb_select_kill"
        android:contentDescription="@string/progress_image_description"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/txt_process_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/img_process_icon"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="2.5dp"
        android:layout_toRightOf="@+id/img_process_icon"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/txt_process_mem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/img_process_icon"
        android:layout_marginBottom="2.5dp"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@+id/img_process_icon"
        android:text="@string/txt_ram_used"
        android:textColor="@color/black"
        android:textSize="@dimen/process_txt_size" />

    <TextView
        android:id="@+id/txt_system_process"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/txt_process_mem"
        android:layout_alignParentRight="true"
        android:layout_marginRight="5dp"
        android:text="@string/txt_system_process"
        android:textColor="@color/system_process_txt_color"
        android:textSize="@dimen/process_txt_size"
        android:visibility="invisible" />

</RelativeLayout>