<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_menu_item_bg_selector"
    android:gravity="center_vertical" >

    <TextView
        android:id="@+id/txt_file_type"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/file_mgr_lst_item_height"
        android:layout_marginLeft="10dp"
        android:gravity="center"
        android:text="@string/txt_file_type"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/txt_file_total_mem"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/file_mgr_lst_item_height"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/txt_file_type"
        android:gravity="center"
        android:text="@string/txt_file_total_mem"
        android:textSize="14sp" />

    <ImageView
        android:id="@+id/img_file_mgr_list_arrow"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/file_mgr_lst_item_height"
        android:layout_alignParentRight="true"
        android:layout_marginRight="10dp"
        android:contentDescription="@string/image_right_arrow"
        android:src="@drawable/ic_arrows_right" />

    <ProgressBar
        android:id="@+id/pgb_file_load"
        style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Small"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/file_mgr_lst_item_height"
        android:layout_alignParentRight="true"
        android:layout_marginRight="10dp"
        android:contentDescription="@string/image_right_arrow"
        android:src="@drawable/ic_arrows_right"
        android:visibility="gone" />

</RelativeLayout>